fix: layout bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,3 @@
   }
 }
 
-body {
-  /* background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif; */
-}
